2010-12-08 Wed  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-require-main): Disable
	`epackage-require-emacs'. url.el not used yet.
	(epackage--batch-ui-menu-header): New.
	(epackage-maintainer): New.
	(epackage-batch-ui-list-installed-packages): Add `interactive'.
	(epackage-batch-ui-list-not-installed-packages): Add `interactive'.
	(epackage-batch-ui-list-not-installed-packages): Add `interactive'.
	(epackage-batch-ui-list-downloaded-packages): Add `interactive'.
	(epackage-batch-ui-download-sources-list): Add `interactive'.
	(epackage-batch-ui-upgrade-all-packages): Add `interactive'.
	(epackage-batch-ui-loader-file-byte-compile): Add `interactive'.
	(epackage-batch-ui-loader-file-generate): Add `interactive'.
	(epackage-loader-file-generate): Move
	`epackage-with-message' outer to include *.elc generate message.
	(epackage-batch-ui-menu): Add "?" help command.
	(epackage-sources-list-info-pkg-list): Correct regexp.
	(epackage-sources-list-verify): Use or, not unless.
	(epackage-sources-list-p): Rewrite. Return file name.
	(epackage-cmd-package-check-macro): New.
	(epackage-cmd-autoload-package): Rewrite.
	(epackage-cmd-enable-package): Rewrite.
	(epackage-cmd-disable-package): Rewrite.
	(epackage-cmd-activate-package): Rewrite.
	(epackage-cmd-deactivate-package): Rewrite.
	(epackage-cmd-clean-package): Rewrite.
	(epackage-sources-list-info-pkg-list): Add sort.
	(epackage-sources-list-info-main): Correct regexp.
	(epackage-status-installed-packages): Correct function.
	(epackage-batch-ui-menu): Add `epackage-batch-ui-menu'.
	(epackage-file-name-directory-previous): New.
	(epackage-file-name-basename): New.

2010-12-07 Tue  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-push): New. Rewrite all other functions to
	take advantage of this macro.
	(epackage-status-installed-packages): New.
	(epackage-initialize-verify): New.
	(epackage--symlink-support-flag): New.
	(epackage-enable-file): New.